--- a/src/react-app/components/util/markdown-viewer.css
+++ b/src/react-app/components/util/markdown-viewer.css
@@ -1,47 +1,54 @@
 .markdown-content h1 {
     font-size: 2rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
 }
 
 .markdown-content h2 {
     font-size: 1.8rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
 }
 
 .markdown-content h3 {
     font-size: 1.6rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
 }
 
 .markdown-content h4 {
     font-size: 1.4rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
 }
 
 
 .markdown-content h5 {
     font-size: 1.4rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
 }
 
 .markdown-content h6 {
     font-size: 1.4rem;
-    margin-top: 1rem;
+}
+
+.markdown-content blockquote,
+.markdown-content code,
+.markdown-content h1,
+.markdown-content h2,
+.markdown-content h3,
+.markdown-content h4,
+.markdown-content h5,
+.markdown-content h6,
+.markdown-content li,
+.markdown-content p,
+.markdown-content pre,
+.markdown-content table,
+.markdown-content ul,
+.markdown-content ol
+{
     margin-bottom: 1rem;
 }
 
-.markdown-content p {
-    margin-bottom: 1rem;
+.markdown-content ul
+{
+    list-style: outside;
 }
 
-.markdown-content ul {
-    list-style: disc;
-    margin-bottom: 1rem;
+.markdown-content ol
+{
+    list-style: decimal;
 }
 
 .markdown-content li {
